# academic-thesis-ai

./: .citation_cache_arxiv.json  .citation_cache_crossref.json  .dockerignore  .env.example  .gitignore  00_START_HERE.md  BUG_FIX_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DAY_9_FINAL_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  ETHICS.md  FAQ.md  GEMINI_GROUNDED_FIX.md  GEMINI_GROUNDED_FIX_SUMMARY.md  GITHUB_RELEASE_NOTES.md  MONOREPO_MIGRATION.md  PRODUCTION_RELEASE.md  QUICKSTART.md  README.md  README_NEW.md  README_OLD.md  ROADMAP.md  SECURITY.md  SESSION.md  SESSION_SUMMARY.md  TERMS_OF_SERVICE.md  ai_generated_paper.md  audit_landing_vs_repo.sh  config.py  create_screenshots.py  create_showcase_thesis.py  docker-compose.yml  generate_pdf_for_landing.py  index.html  pyproject.toml  requirements.txt  setup.sh  (+10 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  pull_request_template.md  settings.yml
.next/: trace  trace-build
academic_thesis_ai/: __init__.py  cli.py  verify.py  version.py
backend/: README.md  modal_worker.py
concurrency/: __init__.py  concurrency_config.py
config/: __init__.py
data/: README.md  generated_readme_sections.md  metrics.json
docs/: API_KEYS.md  ARCHITECTURE.md  AUDIT_RESPONSE_PROGRESS.md  BENCHMARKS.md  DAY10_CITATION_FILTERING_RESULTS.md  DAY1_ACADEMIC_API_FOUNDATION.md  DOCUMENTATION_AUDIT_2025-11-22.md  DOCUMENTATION_CLEANUP_COMPLETE.md  FIGMA_DESIGNER_BRIEF.md  IMPROVEMENTS_COMPLETE_SUMMARY.md  INSTALLATION.md  LIMITATIONS.md  PRE_LAUNCH_CHECKLIST.md  PRODUCTION_MONITORING.md  QUALITY_CHECKLIST.md  README.md  USER_FEEDBACK_IMPROVEMENTS.md  VISUALIZATION_SPECS.md  VISUAL_ASSETS_GUIDE.md  WEEK_PLAN_PRODUCTION_READY.md
examples/: GALLERY.md  README.md  academic-style.css  academic_ai_thesis.docx  ai_pricing_thesis.docx  co2_german_thesis.docx  co2_thesis_german.docx  custom-reference.docx  opensource_thesis.docx  quick_test.py  sample_outline.md  sample_research_notes.md  thesis_showcase.docx  thesis_showcase.html  thesis_showcase_basic.docx  thesis_showcase_german_co2.docx
logs/: README.md
mcp_servers/: README.md  install_all.sh
opendraft/: __init__.py  cli.py  verify.py
prompts/: 00_WORKFLOW.md
scripts/: clean_thesis_for_publication.py  cleanup_thesis.py  enrich_incomplete_citations.py  export_clean_pdfs.py  fill_missing_citations.py  generate_docs.py  generate_missing_abstracts.py  inspect_day10_results.sh  integrate_110_percent_citations.py  monitor_day10.sh  regenerate_all_theses.py  regenerate_clean_docx.py  regenerate_theses_parallel.py  repair_showcase_theses.py  research_110_percent_citations.py  update_examples.py  validate_pdf_structure.py  validate_thesis_quality.py
showcase_thesis/: SHOWCASE_THESIS.md
templates/: title-page-acm.tex  title-page-ieee.tex  title-page-minimal.tex  title-page-university.tex
test_results/: 00_setup_log.md  04_paper_outline.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_TEST_REPORT.md  FULL_VERIFICATION_TEST.md  minimal_paper.md
tests/: README.md  conftest.py  test_academic_citation_search.py  test_api_citations.py  test_citation_database.py  test_deduplicate_citations.py  test_deep_research.py  test_exceptions.py  test_health_check.py  test_inline_markdown.py  test_pdf_engines.py  test_retry.py  test_safety_filter_fix.py  test_scout_api.py  test_scrape_citation_metadata.py  test_utils.py  validators.py  (+1 more)
(+572 files in other folders)
