[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "academic-thesis-ai"
version = "1.3.1"
description = "AI-Powered Academic Writing Framework with 15 specialized agents and 200M+ research papers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Federico De Ponte", email = "federico.deponte@example.com"}
]
maintainers = [
    {name = "Federico De Ponte", email = "federico.deponte@example.com"}
]
keywords = [
    "academic-writing",
    "thesis",
    "ai",
    "research",
    "citation-management",
    "llm",
    "pdf-generation",
    "scholarly"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.20.0",
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
    "pybtex>=0.24.0",
    "citeproc-py>=0.6.0",
    "PyYAML>=6.0.0",
    "markdown>=3.5.0",
    "weasyprint>=60.0",
    "python-docx>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]
docker = [
    "streamlit>=1.28.0",
]
all = [
    "academic-thesis-ai[dev,docker]",
]

[project.urls]
Homepage = "https://academic-thesis-ai-landing.vercel.app"
Documentation = "https://github.com/federicodeponte/academic-thesis-ai/tree/main/docs"
Repository = "https://github.com/federicodeponte/academic-thesis-ai"
Changelog = "https://github.com/federicodeponte/academic-thesis-ai/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/federicodeponte/academic-thesis-ai/issues"

[project.scripts]
academic-thesis-ai = "academic_thesis_ai.cli:main"
thesis-ai = "academic_thesis_ai.cli:main"

[tool.setuptools]
packages = ["academic_thesis_ai", "utils", "concurrency"]
include-package-data = true

[tool.setuptools.package-data]
academic_thesis_ai = ["*.md", "prompts/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --strict-markers --cov=. --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E266", "E501", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
